<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.lanternsoftware.currentmonitor</groupId>
	<artifactId>lantern-currentmonitor</artifactId>
	<packaging>jar</packaging>
	<version>0.9.5</version>
	<name>lantern-currentmonitor</name>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.29</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>
		<dependency>
			<groupId>com.pi4j</groupId>
			<artifactId>pi4j-gpio-extension</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.hypfvieh</groupId>
			<artifactId>bluez-dbus</artifactId>
			<version>0.1.3</version>
		</dependency>
		<dependency>
			<groupId>com.lanternsoftware.currentmonitor</groupId>
			<artifactId>lantern-datamodel-currentmonitor</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.lanternsoftware.util</groupId>
			<artifactId>lantern-util-http</artifactId>
			<version>1.0.0</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<executions>
					<execution>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<phase>compile</phase>
					</execution>
				</executions>
				<configuration>
					<optimize>true</optimize>
					<showDeprecation>true</showDeprecation>
					<encoding>UTF-8</encoding>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<finalName>lantern-currentmonitor</finalName>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>com.lanternsoftware.currentmonitor.MonitorApp</Main-Class>
										<Specification-Title>Lantern Power Monitor</Specification-Title>
										<Specification-Version>${project.version}</Specification-Version>
										<Specification-Vendor>Lantern Software, Inc.</Specification-Vendor>
									</manifestEntries>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
